# dockpipe

./: .gitattributes  .gitconfig  .gitignore  .gosec.json  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dockpipe.config.json  dockpipe.yml  embed.go  go.mod  go.sum  go.work
.cursor-server/: .fea2f546c979a0a4ad1deab23552a43568807590.token
.devcontainer/: Dockerfile  devcontainer.json
.dockpipe/: local-model-notes.txt  local-model.env  orchestrator-cursor-prompt.md  paste-this-prompt.txt  review-context.json  review-context.md  review-files.txt  review-signals.txt  review-summary.env
.dorkpipe/: metrics.jsonl  run.json
.github/: dependabot.yml
.ssh/: known_hosts
apps/: README.md
assets/: README.md  entrypoint.sh  parse_workflow_steps.py
contrib/: README.md
demo/: README.md
dockpipe/: README.md
docs/: README.md  TODO.md  agentic-workflows.md  architecture-model.md  architecture.md  artifacts.md  (+47 more)
src/app/tooling/dockpipe-launcher/: CMakeLists.txt  README.md  dockpipe-launcher.qrc
src/app/tooling/dockpipe-launcher/resources/theme/: pipeon-dark.qss  pipeon-light.qss  pipeon.qss
src/app/tooling/dockpipe-launcher/resources/windows/: dockpipe-launcher.rc
src/app/tooling/dockpipe-launcher/src/: BasicModeWidget.cpp  BasicModeWidget.h  Context.cpp  Context.h  ContextStore.cpp  ContextStore.h  DockerObservabilityWidget.cpp  DockerObservabilityWidget.h  DockpipeChoices.cpp  DockpipeChoices.h  EditContextDialog.cpp  EditContextDialog.h  GitHelper.cpp  GitHelper.h  LauncherSettings.cpp  LauncherSettings.h  LogViewerDialog.cpp  LogViewerDialog.h  MainWindow.cpp  MainWindow.h  PackageManagerDialog.cpp  PromptDialog.cpp  PromptDialog.h  SessionManager.cpp  SessionManager.h  SettingsDialog.cpp  SettingsDialog.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  Theme.cpp  Theme.h  WorkflowCatalog.cpp  WorkflowCatalog.h  WorkflowLaunchDialog.cpp  WorkflowLaunchDialog.h  main.cpp
src/apps/pipeon-launcher/: CMakeLists.txt  README.md  pipeon.qrc
src/apps/pipeon-launcher/resources/theme/: pipeon-dark.qss  pipeon-light.qss  pipeon.qss
src/apps/pipeon-launcher/src/: BasicModeWidget.cpp  BasicModeWidget.h  Context.h  ContextDiscovery.cpp  ContextDiscovery.h  ContextRowWidget.cpp  ContextRowWidget.h  ContextStore.cpp  DockerObservabilityWidget.cpp  DockerObservabilityWidget.h  DockpipeChoices.cpp  DockpipeChoices.h  EditContextDialog.cpp  EditContextDialog.h  FlathubClient.h  FlathubSearchDialog.cpp  FlathubSearchDialog.h  LauncherSettings.cpp  LauncherSettings.h  LogViewerDialog.cpp  MainWindow.cpp  MainWindow.h  PackageManagerDialog.cpp  PackageManagerDialog.h  SessionManager.cpp  SessionManager.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  Theme.cpp  WorkflowCatalog.cpp  WorkflowCatalog.h  main.cpp
(+1318 files in other folders)
